# xls2text

./: .gitignore  CMakeLists.txt  README.md  build.sh  input.xls  output.txt  xls2text.cpp  xls_wrapper.c  xls_wrapper.h  xls预研.docx
